@@ -7,7 +7,9 @@
     -- Fixed rt88518: typo fixes (dsteinbrunner@pobox.com)
     -- Fixed rt85715: IPv6 support for local_ip_string
        (ROBN@cpan.org)
-    -- Fixed 129484: deal with EINTR in IO::Poll path
+    -- Fixed rt129484: deal with EINTR in IO::Poll path
+    -- Fixed rt72670: simple optimization by caching pack
+       (nicolas.rochelemagne@cpanel.net, bitcard@miuku.net)
 
 1.61 (2008-11-27)
     -- IPv6 support.  At least enough to get Perlbal going.
